# Take-Home-Assessment

./: .coverage  .dockerignore  .env  .env.example  COMPLETION_SUMMARY.md  DEMO_CHEATSHEET.md  DEMO_GUIDE.md  DEMO_WALKTHROUGH.md  DOCKER.md  Dockerfile  FEATURES.md  GETTING_STARTED.md  Makefile  README.md  SIMPLE_DEMO_SCRIPT.md  START_DEMO.md  WALKTHROUGH.md  computer_use_backend.db  demo.py  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  docker-start.sh  docker-stop.sh  pyproject.toml  test_delete.py  test_websocket.py  test_websocket_client.py  validate_structure.py
.hypothesis/constants/: 12ab0df6776489a8  19e03ee362938c0b  3fb40da6010ddd46  59a5ec23361a7c86  65e45d7071ed4655  698f0217a992273c  7bcaf72c8c115d4e  82bfa4917f4e45e2  95586fa19c32d832  9622d6873b0fb710  9bc04f94aa79018d  ba4a07901314d439  d89bc040fc1acf92  e020a43d8134f2cd  e53db15141a7d7e7  ec602bfb060eb784  ee974ea5b52900c4
.hypothesis/examples/04e6b3400353b141/: 91162983cf7554ed  f8fc240dcd6b793a
.hypothesis/examples/91162983cf7554ed/: bd34af092abbb7d7
.hypothesis/examples/f8fc240dcd6b793a/: 01aa3d618075f20a  04753d0252c067f0  0903d01e86ab3e77  0e8088c7bce76933  1692fe8bd8ab3389  1b4ccaafcc17e95f  351e7e5e970d0427  3dd3361ba5ca54db  44f9d51e8b666567  4bdb7bbe7695857d  4fec1a2e8f931535  6243f85f4128bf23  66f9d21029a2131e  (+38 more)
alembic/: env.py
alembic/versions/: f3665c33c3a6_initial_migration_create_sessions_and_.py
computer_use_backend/: __init__.py  config.py  database.py  logging_config.py  main.py
computer_use_backend/models/: __init__.py  database.py  schemas.py
computer_use_backend/routers/: __init__.py  health.py  sessions.py  vnc.py  websocket.py
computer_use_backend/services/: __init__.py  agent_service.py  mock_agent_service.py  session_manager.py  stream_handler.py  vnc_server.py  worker.py
computer_use_backend/static/: index.html
tests/: __init__.py  conftest.py  test_database_ops.py  test_health.py  test_properties.py  test_properties_append.py
(+3 files in other folders)
